@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * Removed sorting of the sections in the multiFaultSource reader to keep
+    the rup_idxs consistent with the order in the files
   * GMFs too small to produce losses now give a warning rather than an error
   * Fixed bug in `get_ry0_distance` breaking conditioned GMFs
   * Made sure lon and lat are rounded to 5 digits in the site collection
